--- a/index.html
+++ b/index.html
@@ -6,9 +6,19 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/reset.css">
-    <title>Document</title>
+    <title>BusMall</title>
 </head>
 <body>
-    
+    <header>
+
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
+
+    <script src="js/app.js"></script>
 </body>
 </html>
