creating a stopping point

--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
 
     </header>
     <main>
+        <section id="productImages">
+        <ul>
+            <li id="firstProduct"> <img id="firstProductImg" src="" alt=""></li>
+            <li id="secondProduct"><img id="secondProductImg" src="" alt=""></li>
+            <li id="thirdProduct"><img id="thirdProductImg" src="" alt=""></li>
+        </ul>
+        </section>
 
     </main>
     <footer>
