--- a/index.html
+++ b/index.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/reset.css">
     <title>BusMall</title>
@@ -13,14 +10,28 @@
 
     </header>
     <main>
-        <section id="productImages">
-        <ul>
-            <li id="firstProduct"> <img id="firstProductImg" src="" alt=""></li>
-            <li id="secondProduct"><img id="secondProductImg" src="" alt=""></li>
-            <li id="thirdProduct"><img id="thirdProductImg" src="" alt=""></li>
-        </ul>
-        </section>
+        <section id="productImgs">
+        <!-- <ul>
+            <li id="firstProduct"> <img id="firstProductImg" src="" alt="Photo of the first product"></li>
+            <li id="secondProduct"><img id="secondProductImg" src="" alt="Photo of the second product"></li>
+            <li id="thirdProduct"><img id="thirdProductImg" src="" alt="Third photo of the third product"></li>
+        </ul> -->
+            <div id="firstProduct"> 
+                <img id="firstProductImg" src="" alt="Photo of the first product">
+                <h2 id="firstProductLbl">Boots</p>
+         </div>
 
+            <div id="secondProduct">
+                <img id="secondProductImg" src="" alt="Photo of the second product">
+                <h2 id="secondProductLbl">pen</h2>
+          </div>
+    
+          <div id="thirdProduct">
+                <img id="thirdProductImg" src="" alt="Third photo of the third product">
+                <h2 id="thirdProductLbl">bag</h2>
+      </div>
+
+        </section>
     </main>
     <footer>
 
