random three images are now working, still got fix some bugs

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </header>
     <main>
         
-        <section id="productImgs">
+        <section id="productImages">
         <!-- <ul>
             <li id="firstProduct"> <img id="firstProductImg" src="" alt="Photo of the first product"></li>
             <li id="secondProduct"><img id="secondProductImg" src="" alt="Photo of the second product"></li>
