added charts js

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
     </header>
     <main>
-        <section id="productImgs">
+        
+        <section id="productImages">
         <!-- <ul>
             <li id="firstProduct"> <img id="firstProductImg" src="" alt="Photo of the first product"></li>
             <li id="secondProduct"><img id="secondProductImg" src="" alt="Photo of the second product"></li>
@@ -18,17 +19,17 @@
         </ul> -->
             <div id="firstProduct"> 
                 <img id="firstProductImg" src="" alt="Photo of the first product">
-                <h2 id="firstProductLbl">Boots</p>
+                <h2 id="firstProductLbl"></h2>
          </div>
 
             <div id="secondProduct">
                 <img id="secondProductImg" src="" alt="Photo of the second product">
-                <h2 id="secondProductLbl">pen</h2>
+                <h2 id="secondProductLbl"></h2>
           </div>
     
           <div id="thirdProduct">
                 <img id="thirdProductImg" src="" alt="Third photo of the third product">
-                <h2 id="thirdProductLbl">bag</h2>
+                <h2 id="thirdProductLbl"></h2>
       </div>
 
         </section>
