worked some bugs

--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="https://fonts.googleapis.com/css?family=Righteous&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/reset.css">
     <title>BusMall</title>
 </head>
 <body>
     <header>
-
+        <img id="busLogo" src="img/bus_logo.jpg" alt="BusMall logo">
+        <h2>BusMall</h2>
     </header>
     <main>
-        
+        <section id="productList">
+
+        </section>   
         <section id="productImages">
         <!-- <ul>
             <li id="firstProduct"> <img id="firstProductImg" src="" alt="Photo of the first product"></li>
@@ -20,17 +24,17 @@
             <div id="firstProduct"> 
                 <img id="firstProductImg" src="" alt="Photo of the first product">
                 <h2 id="firstProductLbl"></h2>
-         </div>
+            </div>
 
             <div id="secondProduct">
                 <img id="secondProductImg" src="" alt="Photo of the second product">
                 <h2 id="secondProductLbl"></h2>
-          </div>
+           </div>
     
-          <div id="thirdProduct">
+            <div id="thirdProduct">
                 <img id="thirdProductImg" src="" alt="Third photo of the third product">
                 <h2 id="thirdProductLbl"></h2>
-      </div>
+            </div>
 
         </section>
     </main>
